# ckb-vm-decoder

./: .gitignore  .gitmodules  Cargo.toml  README.md  bench.md  build.rs  codegen.py
benches/: bench_decode.rs
src/: b.rs  c.rs  common.rs  i.rs  lib.rs  mod.rs  rvv_decoder.rs  v.rs
templates/: rvb  rvc  rvi  rvm  rvv
