[package]
name = "ckb-vm-decoder"
version = "0.1.0"
edition = "2021"

[dependencies]
criterion = "0.3.6"
rand = {version = "0.8.5", features = ["small_rng"]}
ckb-vm = { path = "ckb-vm", version = "0.21.0" }
ckb-vm-definitions = { path = "ckb-vm/definitions", version = "0.21.0" }

[[bench]]
name = "bench_decode"
path = "benches/bench_decode.rs"
harness = false
